<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SessionHistoryDetail">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:context="com.example.dell.stayfit.MapsActivity" />

        <TextView
            android:id="@+id/headsessionnametv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d9d4d4"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="24dp"
            android:padding="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:background="@drawable/borderbottom"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:src="@drawable/ic_directions_run_black_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"

                android:text="@string/session_name" />

            <TextView
                android:id="@+id/showsessionnametv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="#000000"
                android:text="@string/value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/borderbottom"

            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:src="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/total_time" />

            <TextView
                android:id="@+id/showtotaltimetv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="4"
                android:text="@string/value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:src="@drawable/ic_date_range_black_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/date" />

            <TextView
                android:id="@+id/showdatetv"
                android:layout_width="0dp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:src="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/showdistancetv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="4"
                android:text="@string/value" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
